[gd_scene load_steps=7 format=3 uid="uid://b3uavni7kl3od"]

[ext_resource type="Script" path="res://UI/story_scene_test.gd" id="1_nqlcb"]
[ext_resource type="Texture2D" uid="uid://hjg4tyvnmq4q" path="res://Assets/BackgroundStory.png" id="2_y1nnu"]
[ext_resource type="LabelSettings" uid="uid://cdo1rbe1us7ji" path="res://Assets/pixeboy_label_settings.tres" id="3_ro5y3"]
[ext_resource type="Texture2D" uid="uid://t12fkh77p1vs" path="res://Assets/button.png" id="4_c886d"]
[ext_resource type="Texture2D" uid="uid://qvdw3vs21re" path="res://Assets/button_hover.png" id="5_qskrc"]
[ext_resource type="LabelSettings" path="res://Assets/pixeboy_button_settings.tres" id="6_v2amc"]

[node name="StoryScene" type="CanvasLayer"]
script = ExtResource("1_nqlcb")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("2_y1nnu")

[node name="DialogBox" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -55.0
offset_right = 119.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Hello world!
Never gonna give you up.
Never gonna let you down.
Never gonna run around and desert you"
label_settings = ExtResource("3_ro5y3")
autowrap_mode = 2

[node name="NextButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -42.0
offset_right = 24.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_c886d")
texture_hover = ExtResource("5_qskrc")

[node name="Label" type="Label" parent="NextButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "NEXT"
label_settings = ExtResource("6_v2amc")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
